--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-validators": "^1.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
